# majordomus

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  MAJORDOMUS.md  METODS_ARCH_DEV.en.md  METODS_ARCH_DEV.ru.md  Makefile  PLAN.md  README.md  execution_plan.yaml  pyproject.toml
src/majordomus/: __init__.py
src/majordomus/cli/: __init__.py  init_cmd.py  main.py  project_cmd.py  render.py  workspace_cmd.py
src/majordomus/core/: __init__.py  exceptions.py  project_engine.py  schema_loader.py  workspace_engine.py
src/majordomus/schemas/: __init__.py  role_policy_schema_v1.json  roles_schema_v1.json  state_machine_schema_v1.json  task_schema_v1.json  workspace_schema_v1.json
tests/fixtures/golden/: workspace_all_pass.validate.json
tests/fixtures/workspace_all_pass/: majordomus.workspace.yaml
tests/fixtures/workspace_broken_task_json/: majordomus.workspace.yaml
tests/fixtures/workspace_invalid_schema/: majordomus.workspace.yaml
tests/fixtures/workspace_invalid_yaml/: majordomus.workspace.yaml
tests/fixtures/workspace_missing_governance_skip/: majordomus.workspace.yaml
tests/fixtures/workspace_one_fail/: majordomus.workspace.yaml
tests/fixtures/workspace_policy_forbidden/: majordomus.workspace.yaml
tests/fixtures/workspace_policy_invalid/: majordomus.workspace.yaml
tests/integration/: test_init_cli.py  test_project_cli.py  test_workspace_cli.py
tests/unit/: test_paths.py  test_plugins_hooks.py  test_policy_engine.py  test_schema_loader.py  test_sorting.py  test_state_machine.py  test_task_registry.py  test_validator_line_numbers.py
(+54 files in other folders)
